# Player

./: .gitignore  README.md  build.gradle  common.gradle  dependencies.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_home.xml  fragment_dashboard.xml  item_audio.xml
audiolibrary/: CMakeLists.txt  build.gradle
audiolibrary/src/main/: AndroidManifest.xml
audiolibrary/src/main/cpp/: AudioPlayer.cpp  AudioPlayer.h  Logger.cpp  Logger.h  audiolib.cpp
audiolibrary/src/main/java/com/rygital/audiolibrary/: AudioFileEndListener.kt  AudioLibWrapper.kt
audiolibrary/src/test/java/com/rygital/audiolibrary/: ExampleUnitTest.java
audioplayer/: build.gradle
audioplayer/src/main/: AndroidManifest.xml
core/: build.gradle
core/src/main/: AndroidManifest.xml
core/src/main/res/color/: color_statelist_text.xml
core/src/main/res/values/: colors.xml  colors_base.xml  strings.xml  styles.xml
core/src/main/res/values-night/: colors.xml
database/: build.gradle
database/src/main/: AndroidManifest.xml
feature-explorer/: build.gradle
feature-explorer/src/main/: AndroidManifest.xml
feature-explorer/src/main/res/drawable/: ic_music_note_black_24dp.xml
feature-explorer/src/main/res/layout/: fragment_explorer.xml  item_audio.xml
feature-explorer/src/main/res/values/: strings.xml  styles.xml
feature-widget/: build.gradle
feature-widget/src/main/: AndroidManifest.xml
feature-widget/src/main/res/drawable/: ic_pause.xml  (+2 more)
gradle/wrapper/: gradle-wrapper.properties
proguard/: proguard-rules.pro
(+68 files in other folders)
